<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <item
        android:id="@+id/bottom_menu_profile"
        android:enabled="true"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_menu_places"
        android:enabled="true"
        android:icon="@drawable/baseline_place_24"
        android:title="@string/places"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bottom_menu_inbox"
        android:enabled="true"
        android:icon="@drawable/baseline_chat_blue_24"
        android:title="@string/inbox"
        app:showAsAction="ifRoom"/>
</menu>