<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp">

    <ImageView
        android:id="@+id/logout_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="25dp"
        android:contentDescription="@string/logout_button"
        android:background="@drawable/baseline_person_24"
        app:layout_constraintEnd_toStartOf="@id/delete_account_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/logout_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/logout"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/logout_button"
        app:layout_constraintEnd_toEndOf="@id/logout_button"
        app:layout_constraintTop_toBottomOf="@id/logout_button"/>

    <ImageView
        android:id="@+id/delete_account_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="25dp"
        android:contentDescription="@string/delete_account_button"
        android:background="@drawable/baseline_clear_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/logout_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/delete_account_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/delete"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@id/delete_account_button"
        app:layout_constraintEnd_toEndOf="@id/delete_account_button"
        app:layout_constraintTop_toBottomOf="@id/delete_account_button"/>

    <TextView
        android:id="@+id/delete_account_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@id/delete_account_button"
        app:layout_constraintEnd_toEndOf="@id/delete_account_button"
        app:layout_constraintTop_toBottomOf="@id/delete_account_text_1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/delete_account_text_2" />

</androidx.constraintlayout.widget.ConstraintLayout>