<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/login_constraint_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.LoginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:contentDescription="@string/login_background"/>


    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="@dimen/fui_auth_method_button_width"
        android:layout_height="@dimen/fui_auth_method_button_width"
        android:background="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/facebook_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/logo"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/facebook_button"
        style="@style/FirebaseUI.Button.AccountChooser.FacebookButton"
        android:layout_width="@dimen/fui_auth_method_button_width"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_facebook"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/google_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/google_button"
        style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
        android:layout_width="@dimen/fui_auth_method_button_width"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="50dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>