<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/add_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:paddingBottom="30dp"
                android:text="@string/add_a_new_trip"
                android:textColor="@color/white"
                android:textSize="@dimen/text_title"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/edit_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:paddingBottom="50dp"
                android:text="@string/edit_a_trip"
                android:textColor="@color/white"
                android:textSize="@dimen/text_title"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/name_of_your_trip"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="@id/add_button"
                app:layout_constraintStart_toStartOf="@id/add_button"
                app:layout_constraintTop_toBottomOf="@id/add_trip">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/depart_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/depart_date"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintStart_toStartOf="@id/add_button"
                app:layout_constraintTop_toBottomOf="@id/name_field"/>

            <TextView
                android:id="@+id/return_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/return_date"
                android:textColor="@color/white"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"
                app:layout_constraintHorizontal_weight="3"
                app:layout_constraintEnd_toEndOf="@id/add_button"
                app:layout_constraintTop_toBottomOf="@id/name_field"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:hint="@string/tell_other_buddies_about_your_trip"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="@id/add_button"
                app:layout_constraintStart_toStartOf="@id/add_button"
                app:layout_constraintTop_toBottomOf="@id/depart_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/add_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:text="@string/add_city"
                android:textSize="@dimen/text_normal"
                android:background="@color/green"
                android:textColor="@color/white"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_field" />

            <Button
                android:id="@+id/add_photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:text="@string/add_photos"
                android:textSize="16sp"
                android:background="@color/green"
                android:textColor="@color/white"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_city" />

            <Button
                android:id="@+id/add_buddies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:text="@string/add_buddies"
                android:textSize="16sp"
                android:background="@color/green"
                android:textColor="@color/white"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_photos" />


            <Button
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:text="@string/add_a_new_trip"
                android:textSize="16sp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_buddies" />

            <Button
                android:id="@+id/edit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:text="@string/edit_a_trip"
                android:textSize="16sp"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_buddies" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/add_button" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</LinearLayout>